starlark_syntax/src/syntax/def_tests/kwargs_kwargs.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark_syntax --lib
# ```

Program:
def test(**x, **y): pass

Error: error: Multiple kwargs dictionary in parameters
 --> test.star:1:15
  |
1 | def test(**x, **y): pass
  |               ^^^
  |
